fixed bug with hamburger menu not allowing for proper scrolling if page too small, also updated email form to clear and disable after send

--- a/src/app/components/banner_new.module.scss
+++ b/src/app/components/banner_new.module.scss
@@ -20,6 +20,7 @@
 .header {
 font-size: clamp(4rem, 8vw, 8rem);
 font-weight: lighter;
+z-index: 1;
 }
 
 .content {
