--- a/src/app/components/email-contact-form.module.scss
+++ b/src/app/components/email-contact-form.module.scss
@@ -58,6 +58,10 @@
   &:hover {
     letter-spacing: .25rem;
   }
+
+  &:active {
+    letter-spacing: normal;
+  }
 }
 
 .submitWrapper:after {
