--- a/src/app/components/hamburger_menu.module.scss
+++ b/src/app/components/hamburger_menu.module.scss
@@ -18,12 +18,30 @@
 
   &:active {
     transform: scale(105%);
+    overflow: hidden;
   }
+}
+
+.menuContainer {
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  transform: translateY(-100vh);
+  transition-delay: 1.3s;
+}
+
+.active {
+  transition-delay: .3s;
+  transform: translateY(0vh);
 }
 
 .growCircle {
   position: absolute;
   top: 6rem;
+  right: 6rem;
   height: 5rem;
   width: 5rem;
   background-color: var(--retro-blue);
@@ -38,7 +56,7 @@
   transform: scale(5000%);
 }
 
-.menuContainer {
+.menuContentContainer {
   position: absolute;
   top: 0;
   left: 0;
@@ -51,7 +69,7 @@
   transition-delay: .75s;
 }
 
-.menuContainer.active {
+.menuContentContainer.active {
   transform: translateX(0);
 }
 
